# nxosSDK

./: README.md  setup.cfg  setup.py
src/nxapi/: globalCommon.py  nxApiCli.py
src/nxapi/model/: baseMo.py
src/nxapi/model/bgp/: Session.py
src/nxapi/model/evpn/: Path.py  Routes.py  Session.py
src/nxapi/model/l2route/: Mac.py  MacIp.py  Topology.py
src/nxapi/model/l3/: Vrf.py
src/nxapi/model/nve/: Peer.py  Vni.py
src/nxapi/parsers/: common.py  nve.py
src/nxapi/parsers/bgp/: Session.py
src/nxapi/parsers/evpn/: Routes.py  Session.py
src/nxapi/parsers/l2route/: Mac.py  MacIp.py  Topology.py
src/nxapi/parsers/l3/: Vrf.py
src/nxapi/parsers/nve/: Peer.py  Vni.py
src/nxapi/query/: Defines.py
