[metadata]
name = nxapi
description = A package to interact with Cisco NX-OS devices using the NX-API
long_description_content_type = text/markdown
url = https://github.com/seanh/gha-python-packaging-demo
project_urls =
    Bug Tracker = https://aci-gerrit.cisco.com:8443/plugins/gitiles/mgmt/+/refs/heads/private/ifav/rel/lafayette_python3/tools/TREXACI/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

